[package]
name = "lipmaa-link"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "bench"
harness = false
