[package]
name = "lipmaa-link"
version = "0.2.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
description = "A function to calculate lipmaa sequence numbers."
repository = "https://github.com/pietgeursen/lipmaa-link"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "bench"
harness = false
