[package]
name = "lipmaa-link"
version = "0.2.2"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
description = "A function to calculate lipmaa sequence numbers."
repository = "https://github.com/pietgeursen/lipmaa-link"
license = "AGPL-3.0"

[dependencies]

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
std = []
